load("@rules_python//python:defs.bzl", "py_library")

cc_library(
    name = "unitree_sdk2",
    deps = ["//unitree/unitree_sdk2:lib_unitree"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "unitree_go2_api",
    deps = [
        "//unitree-api:lowlevelapi_cc",
        "//unitree-api:lowlevelapi_types",
    ],
    visibility = ["//visibility:public"],
)

py_library(
    name = "unitree_api_bindings_library",
    data = ["//unitree-api-bindings:unitree_api"],
    imports = ["//unitree-api-bindings"],
    visibility = ["//visibility:public"],
)
