load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_python//python:defs.bzl", "py_library")

cc_library(
    name = "unitree_sdk2",
    deps = ["//unitree/unitree_sdk2:lib_unitree"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "unitree_go2_api",
    deps = [
        "//unitree-api:unitree_driver",
        "//unitree-api:containers",
    ],
    visibility = ["//visibility:public"],
)

py_library(
    name = "unitree_api_bindings",
    data = ["//unitree-api-bindings:unitree_api"],
    imports = ["//unitree-api-bindings"],
    visibility = ["//visibility:public"],
)
