load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_python//python:defs.bzl", "py_library")

cc_library(
    name = "unitree_sdk2",
    deps = ["//unitree/unitree_sdk2:lib_unitree"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "unitree_go2_api",
    data = ["//unitree-api/go2/config:json_config"],
    deps = [
        "//unitree-api/go2:unitree_driver",
        "//unitree-api/go2:containers",
    ],
    visibility = ["//visibility:public"],
)

py_library(
    name = "unitree_api_bindings",
    data = ["//unitree_api_bindings:unitree_api"],
    imports = ["//unitree_api_bindings"],
    visibility = ["//visibility:public"],
)
