""" 
    Bazel Build of Unitree SDK
"""

module(
    name = "unitree-bazel",
)

# Platforms:
bazel_dep(name = "platforms", version = "0.0.10")

# Python Rules:
bazel_dep(name = "rules_python", version = "1.0.0")

# Pybind11:
bazel_dep(name = "pybind11_bazel", version = "2.13.6")

# Python Toolchain:
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.12",
)

# Autocomplete for Bazel:
# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)
