""" 
    Bazel Build of Unitree SDK
"""

module(
    name = "unitree-bazel",
)

# Platforms:
bazel_dep(name = "platforms", version = "0.0.10")

# cc rules:
bazel_dep(name = "rules_cc", version = "0.0.2")

# Python Rules:
bazel_dep(name = "rules_python", version = "1.0.0")

# Abseil Cpp:
bazel_dep(name = "abseil-cpp", version = "20250127.1")

# Pybind11:
bazel_dep(name = "pybind11_bazel", version = "2.13.6")

# Pybind11 Abseil:
bazel_dep(name = "pybind11_abseil", version = "202402.0")


# Python Toolchain:
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.13",
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/mikael-s-persson/bazel-compile-commands-extractor",
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7"
)
