load("@pybind11_bazel//:build_defs.bzl", "pybind_extension", "pybind_library")
load("@rules_python//python:defs.bzl", "py_library", "py_test")


pybind_library(
    name = "example_cc_library",
    srcs = ["example_py.cc"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "lowlevelapi_types",
    srcs = ["lowlevelapi_types.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "lowlevelapi",
    srcs = ["lowlevelapi.h"],
    deps = [
        ":lowlevelapi_types",
        "//unitree/unitree_sdk2:lib_unitree",
    ],
    visibility = ["//visibility:public"],
)

pybind_library(
    name = "lowlevelapi_cc_library",
    srcs = ["lowlevelapi_py.cc"],
    deps = [
        ":lowlevelapi",
        ":lowlevelapi_types",
    ],
    visibility = ["//visibility:public"],
)

pybind_extension(
    name = "lowlevelapi_api",
    deps = [":lowlowlevelapi_cc_library"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "lowlevelapi_py_library",
    data = [":lowlevelapi_api.so"],
    imports = ["."],
)