load("@pybind11_bazel//:build_defs.bzl", "pybind_extension", "pybind_library")
load("@rules_python//python:defs.bzl", "py_library", "py_binary")

cc_library(
    name = "lowlevelapi_types",
    srcs = ["lowlevelapi_types.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "lowlevelapi_cc",
    srcs = ["lowlevelapi.h"],
    deps = [
        ":lowlevelapi_types",
        "//unitree/unitree_sdk2:lib_unitree",
    ],
    visibility = ["//visibility:public"],
)

pybind_library(
    name = "lowlevelapi_cc_library",
    srcs = ["lowlevelapi_py.cc"],
    deps = [
        ":lowlevelapi_cc",
        ":lowlevelapi_types",
    ],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

pybind_extension(
    name = "unitree_api",
    deps = [":lowlevelapi_cc_library"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "lowlevelapi_py_library",
    data = [":unitree_api"],
    imports = ["."],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "test",
    srcs = ["test.py"],
    deps = [
        ":lowlevelapi_py_library",
    ],
    visibility = ["//visibility:public"],
)