load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    data = ["//unitree-api/go2/config:json_config"],
    deps = [
        "//unitree-api/go2:unitree_driver",
        "//unitree-api/go2:containers",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/log:absl_check",
        "@rules_cc//cc/runfiles",
    ],
    visibility = ["//visibility:public"],
)