cc_binary(
    name = "publisher",
    srcs = ["publisher.cpp", "HelloWorldData.cpp", "HelloWorldData.hpp"],
    deps = ["//thirdparty/unitree_sdk2:lib_unitree"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "test",
    srcs = ["HelloWorldData.cpp"],
    hdrs = ["HelloWorldData.hpp"],
     deps = ["//thirdparty/unitree_sdk2:lib_unitree"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "check",
    srcs = ["check.cpp"],
    visibility = ["//visibility:public"],
    copts = ["-std=c++17"],
)