load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "lowlevelapi_types",
    srcs = ["lowlevelapi_types.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "lowlevelapi_cc",
    srcs = ["lowlevelapi.h"],
    deps = [
        ":lowlevelapi_types",
        "//unitree/unitree_sdk2:lib_unitree",
        "@abseil-cpp//absl/status:status",
    ],
    visibility = ["//visibility:public"],
)
