load("@pybind11_bazel//:build_defs.bzl", "pybind_extension", "pybind_library")
load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")

pybind_library(
    name = "unitree_driver_cc_library",
    srcs = ["unitree_driver_py.cc"],
    deps = [
        "//unitree-api:unitree_driver",
        "//unitree-api:containers",
        "@pybind11_abseil//pybind11_abseil:absl_casters",
        "@pybind11_abseil//pybind11_abseil:status_caster",
        "@pybind11_abseil//pybind11_abseil:import_status_module",
    ],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

pybind_extension(
    name = "unitree_api",
    deps = [":unitree_driver_cc_library"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "unitree_api_library",
    data = [":unitree_api"],
    imports = ["."],
    visibility = ["//visibility:public"],
)

py_package(
    name = "unitree_pkg",
    deps = [":unitree_api_library"],
)

exports_files(
    ["description.md"],
    visibility = ["//visibility:public"],
)

py_wheel(
    name = "unitree_go2_api",
    twine = "@publish_deps//twine",
    distribution = "unitree_go2_api",
    summary = "Custom python bindings for the Unitree Go2 robot.",
    description_file = ":description.md",
    python_requires = ">=3.12",
    python_tag = "py3",
    version = "0.0.11",
    deps = [
        ":unitree_pkg",
    ],
)
