cc_binary(
    name = "main",
    srcs = ["main.cc"],
    deps = ["//unitree/unitree_sdk2:lib_unitree"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "robot_state",
    srcs = ["robot_state.cc"],
    deps = ["//unitree/unitree_sdk2:lib_unitree"],
    visibility = ["//visibility:public"],
)
