cc_binary(
    name = "publisher",
    srcs = ["publisher.cpp", "HelloWorldData.cpp", "HelloWorldData.hpp"],
    deps = ["//unitree/unitree_sdk2:lib_unitree"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "subscriber",
    srcs = ["subscriber.cpp", "HelloWorldData.cpp", "HelloWorldData.hpp"],
    deps = ["//unitree/unitree_sdk2:lib_unitree"],
    visibility = ["//visibility:public"],
)
