# hdrs = glob([
#     "common/*.hpp",
#     "idl/*.hpp",
#     "robot/*.hpp",
# ])

# cc_import(
#     name = "static_import_libunitree",
#     hdrs = hdrs,
#     static_library = select({
#         "@platforms//cpu:x86_64": "//lib:amd64_lib",
#         "@platforms//cpu:arm64": "//lib:arm64_lib",
#         "//conditions:default": "@platforms//:incompatible",
#     }),
# )

# cc_library(
#     name = "lib_unitree",
#     hdrs = hdrs,
#     deps = [
#         ":static_import_libunitree",
#         "//thirdparty:lib_ddsc",
#         "//thirdparty:lib_ddscxx",
#     ],
#     copts = ["-fpic"],
#     linkopts = ["-pthread"],
#     visibility = ["//visibility:public"],
# )