link_options = select({
    "@bazel_tools//src/conditions:darwin": [
        "-undefined dynamic_lookup",
        "-pthread",
        "-dynamiclib",
    ],
    "//conditions:default": ["-pthread"],
})

hdrs = glob([
    "include/**/*.hpp",
])

cc_import(
    name = "static_import_libunitree",
    hdrs = hdrs,
    includes = [
        "include",
    ],
    static_library = select({
        "@platforms//cpu:x86_64": "lib/x86_64/libunitree_sdk2.a",
        "@platforms//cpu:arm64": "lib/aarch64/libunitree_sdk2.a",
        "//conditions:default": "@platforms//:incompatible",
    }),
)

cc_library(
    name = "lib_unitree",
    hdrs = hdrs,
    includes = [
        "include",
    ],
    deps = [
        ":static_import_libunitree",
        "//unitree/cyclonedds:lib_ddsc",
        "//unitree/cyclonedds:lib_ddscxx",
    ],
    copts = ["-fPIC"],
    linkopts = link_options,
    visibility = ["//visibility:public"],
)
